--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,10 +1,11 @@
 .header {
   background-color: #2a2a2a;
   font-family: Arial, sans-serif;
-  height: 80px;
+  height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 10;
 }
 
 .nav {
@@ -13,72 +14,58 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 60px;
   width: 100%;
   max-width: 1280px;
   min-width: 320px;
   box-sizing: border-box;
+  background: linear-gradient(to right, #2a2a2a, #404040);
 }
 
 .logo {
   color: #fff;
-  font-size: 48px;
+  font-size: 36px;
   font-weight: 400;
   text-decoration: none;
 }
 
-.menu {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 220px;
-  box-sizing: border-box;
-  font-size: 18px;
-  font-weight: 400;
-}
-
-.active,
 .orange {
-  color: #FF9900;
+  color: #ff9900;
   text-decoration: none;
+  transition: all 0.3s ease;
 }
 
-.inactive {
-  color: #fff;
-  text-decoration: none;
-}
-
-.active:hover,
-.orange:hover,
-.inactive:hover {
-  color: #FFCC66;
-  cursor: pointer;
+.orange:hover {
+  color: #ffcc66;
 }
 
 @media (min-width: 577px) and (max-width: 1024px) {
   .header {
-    height: 70px;
+    height: 50px;
   }
 
   .logo {
-    font-size: 36px;
-  }
-
-  .menu {
-    width: 200px;
-    font-size: 16px;
+    font-size: 30px;
   }
 
   .nav {
-    padding: 0 20px;
+    padding: 0 30px;
+    height: 50px;
   }
 }
 
 @media (min-width: 320px) and (max-width: 576px) {
   .header {
-    height: 60px;
+    height: 40px;
   }
 
   .logo {
-    font-size: 28px;
+    font-size: 24px;
+  }
+
+  .nav {
+    padding: 0 20px;
+    height: 40px;
+    position: relative;
   }
 }
