--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -1,12 +1,20 @@
 .container {
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  margin: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: #1a1a1a;
 }
 
 .main {
-  flex: 1; /* Захватывает оставшееся пространство между Header и Footer */
-  padding: 20px;
-  box-sizing: border-box; /* Учитываем padding в ширине/высоте */
+  margin: 0 auto;
+  padding: 0;
+  width: 100%;
+  max-width: 1280px;
+  min-width: 320px;
+  flex: 1;
+  box-sizing: border-box;
+  display: flex;
 }
