--- a/src/components/LeftPartHomepage/left-part-homepage.module.css
+++ b/src/components/LeftPartHomepage/left-part-homepage.module.css
@@ -3,5 +3,12 @@
   margin: 0;
   padding: 0;
   width: 60%;
-  height: 100%;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+}
+
+.backgroundImg {
+  width: 100%;
+  height: auto;
 }
