--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,15 @@
-body {
+/* body {
   margin: 0;
   padding: 0;
 }
+ */
 
-h1, h2, h3, h4, h5, h6, p {
+ * {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
 }
