--- a/src/components/BurgerMenu/burger-menu.module.css
+++ b/src/components/BurgerMenu/burger-menu.module.css
@@ -1,11 +1,14 @@
- .menu {
+.menu {
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 220px;
+  width: 400px;
   box-sizing: border-box;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 400;
+  line-height: 1.5;
 }
 
 .active,
@@ -30,8 +33,8 @@
 
 .burger {
   position: relative;
-  width: 20px;
-  height: 17px;
+  width: 24px;
+  height: 20px;
   display: none;
   flex-direction: column;
   justify-content: space-between;
@@ -40,15 +43,16 @@
   border: none;
   outline: none;
   padding: 0;
+  z-index: 1000;
 }
 
 .burgerLine {
   display: block;
   width: 100%;
-  height: 3px;
+  height: 4px;
   background-color: #ff9900;
   transition: all 0.3s ease;
-  border-radius: 1.5px;
+  border-radius: 2px;
 }
 
 .burger:hover .burgerLine {
@@ -56,7 +60,7 @@
 }
 
 .burgerOpen .lineTop {
-  transform: translateY(7px) rotate(45deg);
+  transform: translateY(8px) rotate(45deg);
 }
 
 .burgerOpen .lineMiddle {
@@ -64,7 +68,7 @@
 }
 
 .burgerOpen .lineBottom {
-  transform: translateY(-7px) rotate(-45deg);
+  transform: translateY(-8px) rotate(-45deg);
 }
 
 .menu.menuOpen {
@@ -75,8 +79,8 @@
   left: 0;
   width: 100%;
   background-color: #2a2a2a;
-  padding: 0;
-  z-index: 10;
+  padding: 10px 0 50px;
+  z-index: 900;
   box-sizing: border-box;
 }
 
@@ -88,8 +92,8 @@
 
 @media (min-width: 577px) and (max-width: 1024px) {
   .menu {
-    width: 200px;
-    font-size: 14px;
+    width: 300px;
+    font-size: 18px;
   }
 }
 
@@ -101,7 +105,7 @@
   .menu {
     display: none;
     width: auto;
-    font-size: 12px;
+    font-size: 20px;
   }
 
   .menu.menuOpen {
