--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -16,7 +16,7 @@
   align-items: center;
   height: 60px;
   width: 100%;
-  max-width: 1200px;
+  max-width: 1240px;
   min-width: 320px;
   box-sizing: border-box;
   background: linear-gradient(to right, #2a2a2a, #404040);
@@ -26,6 +26,7 @@
   color: #fff;
   font-size: 36px;
   font-weight: 400;
+  line-height: 1.5;
   text-decoration: none;
 }
 
@@ -40,32 +41,18 @@
 }
 
 @media (min-width: 577px) and (max-width: 1024px) {
-  .header {
-    height: 50px;
+  .nav {
+    padding: 0 20px;
   }
+}
 
+@media (min-width: 320px) and (max-width: 576px) {
   .logo {
     font-size: 30px;
   }
 
   .nav {
-    padding: 0 30px;
-    height: 50px;
-  }
-}
-
-@media (min-width: 320px) and (max-width: 576px) {
-  .header {
-    height: 40px;
-  }
-
-  .logo {
-    font-size: 24px;
-  }
-
-  .nav {
-    padding: 0 20px;
-    height: 40px;
+    padding: 0 10px;
     position: relative;
   }
 }
