--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -1,44 +1,19 @@
-/* .container {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  background-color: #1a1a1a;
-  box-sizing: border-box;
-  border: 2px solid green;
-}
-
-.main {
-  margin: 0 auto;
-  padding: 0;
-  width: 100%;
-  max-width: 1200px;
-  min-width: 320px;
-  flex-grow: 1;
-  display: flex;
-  box-sizing: border-box;
-  border: 2px solid purple;
-} */
-
 .container {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Важно: растягиваем контейнер на всю высоту экрана */
+  min-height: 100vh;
   width: 100%;
   background-color: #1a1a1a;
-  border: 2px solid green;
 }
 
 .main {
-  flex-grow: 1; /* Заставляет main занимать всё доступное пространство между header (если есть) и footer */
+  flex-grow: 1;
   margin: 0 auto;
   padding: 0;
   width: 100%;
-  max-width: 1200px;
+  max-width: 1240px;
   min-width: 320px;
   display: flex;
+  flex-direction: row;
   box-sizing: border-box;
-  border: 2px solid purple;
 }
