--- a/src/components/ui/home-page/home-page.module.css
+++ b/src/components/ui/home-page/home-page.module.css
@@ -14,7 +14,7 @@
   flex-direction: column;
   position: relative;
   font-family: Arial, sans-serif;
-  color: #eee;
+  color: #fff;
   text-decoration: none;
 }
 
@@ -105,6 +105,28 @@
   color: #ffcc66;
   cursor: pointer;
 }
+
+.cardsGallery {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  padding: 0;
+}
+
+.cardImage {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: transform 0.3s;
+}
+
+.cardImage:hover {
+  transform: scale(1.01);
+  opacity: .6;
+}
+
 
 @media (min-width: 577px) and (max-width: 1024px) {
   .textContainer {
