--- a/src/components/ui/overlay/overlay.module.css
+++ b/src/components/ui/overlay/overlay.module.css
@@ -1,9 +1,9 @@
 .overlay {
   position: fixed;
-  top: 60px;
+  top: 0;
   left: 0;
   width: 100vw;
-  height: calc(100vh - 60px);
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 100;
   pointer-events: auto;
