--- a/src/components/ui/home-page/home-page.module.css
+++ b/src/components/ui/home-page/home-page.module.css
@@ -147,15 +147,16 @@
     flex-direction: column;
   }
 
-  .rightPartHomepage {
-    width: 100%;
-    order: -1;
-    padding: 0;
-  }
-
   .leftPartHomepage {
     width: 100%;
-    order: 0;
+    order: 1;
+  }
+
+  .backgroundImg {
+    display: none;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
   }
 
   .textContainer {
@@ -165,6 +166,23 @@
       rgba(0, 0, 0, 0.2),
       rgba(255, 255, 255, 0)
     );
+  }
+  
+  .rightPartHomepage {
+    width: 100%;
+    padding: 0;
+    order: 0;
+  }
+
+  .aboutUs {
+    background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.2),
+      rgba(255, 255, 255, 0)
+    );
+    border-radius: 0;
+    padding: 10px;
+    box-sizing: border-box;
   }
 
   .articleText {
@@ -181,16 +199,5 @@
 
   .articleList {
     padding: 5px 20px;
-  }
-
-  .aboutUs {
-    background: linear-gradient(
-      to bottom,
-      rgba(255, 255, 255, 0.2),
-      rgba(255, 255, 255, 0)
-    );
-    border-radius: 0;
-    padding: 10px;
-    box-sizing: border-box;
   }
 }
