--- a/src/components/ui/home-page/home-page.module.css
+++ b/src/components/ui/home-page/home-page.module.css
@@ -108,14 +108,18 @@
 
 .cardsGallery {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 10px;
   padding: 0;
 }
 
+.cardsGalleryNoClick {
+  display: none;
+}
+
 .cardImage {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
   cursor: pointer;
   border-radius: 4px;
@@ -124,9 +128,8 @@
 
 .cardImage:hover {
   transform: scale(1.01);
-  opacity: .6;
+  opacity: 0.6;
 }
-
 
 @media (min-width: 577px) and (max-width: 1024px) {
   .textContainer {
@@ -139,6 +142,14 @@
 
   .articleList {
     padding: 5px 20px;
+  }
+
+  .cardsGallery {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .cardsGalleryNoClick {
+    display: none;
   }
 }
 
@@ -167,7 +178,7 @@
       rgba(255, 255, 255, 0)
     );
   }
-  
+
   .rightPartHomepage {
     width: 100%;
     padding: 0;
@@ -199,5 +210,25 @@
 
   .articleList {
     padding: 5px 20px;
+  }
+
+  .cardsGallery {
+    display: none;
+  }
+
+  .cardsGalleryNoClick {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+    padding: 0;
+  }
+
+  .cardImage {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    cursor: default;
+    border-radius: 0;
+    transition: transform 0.3s;
   }
 }
