--- a/src/components/ui/modal/modal.module.css
+++ b/src/components/ui/modal/modal.module.css
@@ -3,14 +3,46 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 200;
-  margin: 0;
-  padding: 0;
-  background-color: #212121;
-  border-radius: 0;
-  box-shadow: 0px 0px 15px 10px rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.5);
+  max-width: 100%;
+  max-height: 100%;
 }
 
-.modalContent {
-  position: relative;
+.closeButton {
+  position: absolute;
+  top: 0;
+  right: -40px;
+  width: 24px;
+  height: 24px;
+  border: none;
+  background-color: transparent;
+  background-image: url("../../../public/close-icon.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+  z-index: 2000;
 }
+
+.closeButton:hover {
+  opacity: 0.6;
+}
+
+@media (min-width: 577px) and (max-width: 1024px) {
+  .closeButton {
+    background-size: 22px 22px;
+    background-size: 22px 22px;
+    right: -30px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 576px) {
+  .closeButton {
+    background-size: 20px 20px;
+    background-size: 20px 20px;
+    right: 0;
+    top: -30px;
+  }
+}
+
